way faster list implementation in BoundedPriorityList